fix: fixed dishes margin collapse

--- a/client/src/app/components/menu-components/dish-item/dish-item.component.scss
+++ b/client/src/app/components/menu-components/dish-item/dish-item.component.scss
@@ -8,6 +8,7 @@
     order: 5;
     width: 300px;
     object-fit: contain;
+    margin: 0rem 1rem;
   }
   .description {
     order: 10;
@@ -39,9 +40,11 @@
     }
   }
 }
+
 :host {
   display: flex;
   justify-content: flex-end;
+  margin-bottom: 1rem;
 }
 :host:nth-of-type(2n) {
   justify-content: start;
@@ -62,6 +65,9 @@
     width: 100%;
     &__name {
       text-align: center;
+    }
+    &__dish {
+      margin: 0;
     }
   }
   :host:nth-of-type(2n) {
